<resources>
    <string name="app_name">Parking Assistant</string>
    <string name="detail_remaining">Remaining</string>
    <string name="detail_space_total">Total</string>
    <string name="tip_connect_failed">Could not connect to server</string>
    <string name="tip_connection_abort">Connection lost</string>
    <string name="tip_connect_successful">Server connected</string>
    <string name="appbar_menu_about">About</string>
    <string name="copyright">Copyright © CEDT</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="documents">Documents</string>
    <string name="back">Back</string>
    <string name="about_tip_new_version">New version available(%s) restart to update.</string>
    <string name="about_btn_update_now">Update Now</string>
    <string name="na">N/A</string>
    <string name="item_distance">Distance: %s KM</string>
    <string name="item_remaining">%s</string>
    <string name="item_total">/ %s space</string>
</resources>
